package work5;

/**
 * Базовий інтерфейс елемента мережі.
 * Виступає «елементом», над яким можуть виконуватися операції
 * за допомогою шаблону {@code Visitor}. Кожен елемент мережі
 * повинен вміти приймати відвідувача.
 */
public interface NetworkElement {

    /**
     * Повертає ім'я (ідентифікатор) елемента мережі.
     * @return назва елемента
     */
    String getName();

    /**
     * Приймає відвідувача для виконання операції над елементом.
     * Метод реалізує точку входу для застосування шаблону
     * {@code Visitor}: елемент викликає відповідний метод
     * відвідувача, передаючи себе як аргумент.
     * @param visitor відвідувач, що виконує операцію
     */
    void accept(NetworkVisitor visitor);
}